[gd_scene load_steps=11 format=3 uid="uid://cb56jyqau1a0p"]

[ext_resource type="Texture2D" uid="uid://dp6ns6e5nqynt" path="res://assets/map/Space Background_blue.png" id="1_3g1jk"]
[ext_resource type="Script" path="res://scripts/pause_screen.gd" id="1_dd2rn"]
[ext_resource type="FontFile" uid="uid://cjvrsitv57if3" path="res://assets/Stacked pixel.ttf" id="2_kxnyn"]
[ext_resource type="PackedScene" uid="uid://ci3e8foshsdo7" path="res://scenes/confirmation_popup.tscn" id="4_21yeh"]
[ext_resource type="Shader" path="res://shaders/2d_highlight.gdshader" id="4_esbve"]

[sub_resource type="Theme" id="Theme_rqf3m"]
default_font = ExtResource("2_kxnyn")
default_font_size = 32

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ogx1x"]
resource_local_to_scene = true
shader = ExtResource("4_esbve")
shader_parameter/size_effect = 0.3
shader_parameter/speed = 0.0
shader_parameter/highlight_strength = 0.75
shader_parameter/color_mode_toggle = false
shader_parameter/is_horizontal = true
shader_parameter/pause_duration = 0.5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k2sjg"]
resource_local_to_scene = true
shader = ExtResource("4_esbve")
shader_parameter/size_effect = 0.3
shader_parameter/speed = 0.0
shader_parameter/highlight_strength = 0.75
shader_parameter/color_mode_toggle = false
shader_parameter/is_horizontal = true
shader_parameter/pause_duration = 0.5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4m5g2"]
resource_local_to_scene = true
shader = ExtResource("4_esbve")
shader_parameter/size_effect = 0.3
shader_parameter/speed = 0.0
shader_parameter/highlight_strength = 0.75
shader_parameter/color_mode_toggle = false
shader_parameter/is_horizontal = true
shader_parameter/pause_duration = 0.5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6wn56"]
resource_local_to_scene = true
shader = ExtResource("4_esbve")
shader_parameter/size_effect = 0.3
shader_parameter/speed = 0.0
shader_parameter/highlight_strength = 0.75
shader_parameter/color_mode_toggle = false
shader_parameter/is_horizontal = true
shader_parameter/pause_duration = 0.5

[node name="PauseScreen" type="Node2D"]
z_index = 15
script = ExtResource("1_dd2rn")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_3g1jk")

[node name="PAUSED" type="Label" parent="."]
offset_left = -96.0
offset_top = -25.0
offset_right = 96.0
offset_bottom = 27.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("2_kxnyn")
theme_override_font_sizes/font_size = 64
text = "PAUSED"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = -238.0
offset_top = 55.0
offset_right = 226.0
offset_bottom = 89.0
theme = SubResource("Theme_rqf3m")

[node name="Resume" type="Button" parent="HBoxContainer"]
material = SubResource("ShaderMaterial_ogx1x")
layout_mode = 2
text = "Resume"

[node name="Restart" type="Button" parent="HBoxContainer"]
material = SubResource("ShaderMaterial_k2sjg")
layout_mode = 2
text = "Restart
"

[node name="MainMenu" type="Button" parent="HBoxContainer"]
material = SubResource("ShaderMaterial_4m5g2")
layout_mode = 2
text = "Main Menu"

[node name="Quit" type="Button" parent="HBoxContainer"]
material = SubResource("ShaderMaterial_6wn56")
layout_mode = 2
text = "Quit"

[node name="RestartWarning" parent="." instance=ExtResource("4_21yeh")]

[node name="QuitWarning" parent="." instance=ExtResource("4_21yeh")]

[connection signal="focus_entered" from="HBoxContainer/Resume" to="." method="_on_resume_focus_entered"]
[connection signal="focus_exited" from="HBoxContainer/Resume" to="." method="_on_resume_focus_exited"]
[connection signal="pressed" from="HBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="focus_entered" from="HBoxContainer/Restart" to="." method="_on_restart_focus_entered"]
[connection signal="focus_exited" from="HBoxContainer/Restart" to="." method="_on_restart_focus_exited"]
[connection signal="pressed" from="HBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="focus_entered" from="HBoxContainer/MainMenu" to="." method="_on_main_menu_focus_entered"]
[connection signal="focus_exited" from="HBoxContainer/MainMenu" to="." method="_on_main_menu_focus_exited"]
[connection signal="pressed" from="HBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="focus_entered" from="HBoxContainer/Quit" to="." method="_on_quit_focus_entered"]
[connection signal="focus_exited" from="HBoxContainer/Quit" to="." method="_on_quit_focus_exited"]
[connection signal="pressed" from="HBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="confirmation" from="RestartWarning" to="." method="_on_restart_warning_confirmation"]
[connection signal="confirmation" from="QuitWarning" to="." method="_on_quit_warning_confirmation"]
